code25_all/swift/25587861.txt
struct Customer
{
    var name: String
    var email: String
}

var customerDatabase: [String: String] = [Customer(name: "Lionel Messi", email: 
"lmessi@fifa.com"), Customer(name: "Cristiano Ronaldo", email: "cronaldo@fifa.com"), 
Customer(name: "Wayne Rooney", email: "wrooney@fifa.com")]

func randomCustomer() -> ()
{
    var customer = arc4random_uniform(customerDatabase)
    return customer
}

<EXPR>:48:39: error: '[String : String]' is not convertible to 'UInt32'
    var customer = arc4random_uniform(customerDatabase)
                                  ^
Darwin._:1:5: note: in initialization of parameter '_'
let _: UInt32

